--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neural network</title>
+  <link rel="stylesheet" href="styles.css" >
+  <title>Self-driving car</title>
 </head>
 <body>
+  <canvas id="canvas"></canvas>
   
+  <script src="./classes/Car.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
