--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <canvas id="canvas"></canvas>
-  
+
+  <script src="./classes/Controls.js"></script>
   <script src="./classes/Car.js"></script>
   <script src="script.js"></script>
 </body>
