--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css" >
-  <title>Self-driving car</title>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Self-driving car</title>
+  </head>
+  <body>
+    <canvas id="canvas"></canvas>
 
-  <script src="./classes/Controls.js"></script>
-  <script src="./classes/Car.js"></script>
-  <script src="script.js"></script>
-</body>
+    <script src="./classes/Road.js"></script>
+    <script src="./classes/Controls.js"></script>
+    <script src="./classes/Car.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
