--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <canvas id="canvas"></canvas>
 
+    <script src="utilts.js"></script>
     <script src="./classes/Road.js"></script>
     <script src="./classes/Controls.js"></script>
     <script src="./classes/Car.js"></script>
