--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="./classes/Road.js"></script>
     <script src="./classes/Controls.js"></script>
     <script src="./classes/Car.js"></script>
+    <script src="./classes/Sensor.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
